B&L QA/objects/Visco_Detail__c.object
<CustomObject>
    <description>Used by EMEASU to track Visco information</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Used by EMEASU</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visco Details</relationshipLabel>
        <relationshipName>Visco_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Used by EMEASU</description>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALCON - Cellugel</fullName>
                </value>
                <value>
                    <fullName>ALCON - DisCoVisc</fullName>
                </value>
                <value>
                    <fullName>ALCON - DuoVisc</fullName>
                </value>
                <value>
                    <fullName>ALCON - ProVisc</fullName>
                </value>
                <value>
                    <fullName>ALCON - Viscoat</fullName>
                </value>
                <value>
                    <fullName>AMO - Dual Pack</fullName>
                </value>
                <value>
                    <fullName>AMO - Endocoat</fullName>
                </value>
                <value>
                    <fullName>AMO - Healon</fullName>
                </value>
                <value>
                    <fullName>AMO - Healon 5</fullName>
                </value>
                <value>
                    <fullName>AMO - Healon GV</fullName>
                </value>
                <value>
                    <fullName>B+L</fullName>
                </value>
                <value>
                    <fullName>B+L - Amvisc</fullName>
                </value>
                <value>
                    <fullName>B+L - Amvisc Plus</fullName>
                </value>
                <value>
                    <fullName>B+L - OcuCoat</fullName>
                </value>
                <value>
                    <fullName>B D - 1,0%</fullName>
                </value>
                <value>
                    <fullName>B D - 1,2%</fullName>
                </value>
                <value>
                    <fullName>B D - 1,4%</fullName>
                </value>
                <value>
                    <fullName>B D - Multivisc</fullName>
                </value>
                <value>
                    <fullName>CROMA - EYEFILL BIO II</fullName>
                </value>
                <value>
                    <fullName>CROMA - EYEFILL C</fullName>
                </value>
                <value>
                    <fullName>CROMA - EYEFILL D.C.</fullName>
                </value>
                <value>
                    <fullName>CROMA - EYEFILL H.D.</fullName>
                </value>
                <value>
                    <fullName>CROMA - EYEFILL MEGA I</fullName>
                </value>
                <value>
                    <fullName>CROMA - EYEFILL S.C.</fullName>
                </value>
                <value>
                    <fullName>FIDIA - IAL</fullName>
                </value>
                <value>
                    <fullName>PhysIOL - PhysioVisc Integral</fullName>
                </value>
                <value>
                    <fullName>PhysIOL - PhysioVisc Protect</fullName>
                </value>
                <value>
                    <fullName>PhysIOL - PhysioVisc Volume</fullName>
                </value>
                <value>
                    <fullName>ZEISS - Acri-Viscose</fullName>
                </value>
                <value>
                    <fullName>ZEISS - Endogel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Used by EMEASU</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by EMEASU</description>
        <label>Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Used by EMEASU</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Volume_by_Year__c</fullName>
        <description>Used by EMEASU</description>
        <label>Estimated Volume by Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Used by EMEASU</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used by EMEASU</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cohesive</fullName>
                </value>
                <value>
                    <fullName>Combined</fullName>
                </value>
                <value>
                    <fullName>Dispersive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Visco Detail</label>
    <nameField>
        <displayFormat>VS-{000000}</displayFormat>
        <label>Visco Detail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visco Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>